--- a/css/ostrich.css
+++ b/css/ostrich.css
@@ -10,6 +10,6 @@ html {
 
 /* Write your solution here */
 @media only screen and (max-width: 980px) {
-  #o { width: 90%; }
+  #ostrich { width: 90%; }
 }
 
