--- a/css/monkey.css
+++ b/css/monkey.css
@@ -9,5 +9,9 @@ html {
 }
 
 /* Write your solution here */
-
+@media screen and (min-width: 406px) and (max-width: 1170px) {
+  #monkey {
+    top:-100;
+  }
+}
 
