--- a/css/monkey.css
+++ b/css/monkey.css
@@ -10,8 +10,7 @@ html {
 
 /* Write your solution here */
 @media screen and (min-width: 406px) and (max-width: 1170px) {
-  #monkey {
-    top:-100;
+  #monkey { top:-100;
   }
 }
 
