--- a/css/dolphin.css
+++ b/css/dolphin.css
@@ -19,5 +19,10 @@ html {
 }
 
 /* Write your solution here */
-
+@media only screen and (min-width: 992px) and (max-width: 1136px) {
+  #dolphin {
+    top: 0;
+    right: 0;
+  }
+}
 
